# kurbo

./: Cargo.toml
benches/: cubic_fitting.rs  quad_fitting.rs
src/: bezpath.rs  circle.rs  common.rs  conversions.rs  cubicbez.rs  cubicfit.rs  fitting.rs  lib.rs  line.rs  param_curve.rs  point.rs  quadbez.rs  quadfit.rs  rect.rs  size.rs  svg.rs  vec2.rs
