[package]
name = "kurbo"
version = "0.5.2"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "curve", "curves", "bezier", "geometry"]
repository = "https://github.com/linebender/kurbo"
description = "A 2D curves library"
readme = "README.md"
categories = ["graphics"]

[package.metadata.docs.rs]
features = ["mint"]

[dependencies]
arrayvec = "0.4.11"
approx = "0.3.2"
lazy_static = "1.3"
nalgebra = "0.18"

[dependencies.mint]
version = "0.5.1"
optional = true

# This is used for research but not really needed; maybe refactor.
[dev-dependencies]
rand = "0.6"
rusty-fork = "0.2.1"
